--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -20,6 +20,16 @@ jobs:
           sleep 3
           # exit 1  # Uncomment to simulate failure
 
+      - name: Prepare Commit Message
+        id: commit
+        run: |
+          MSG="${GITHUB_EVENT_PATH}"
+          # Extract commit message safely and replace newlines with space
+          COMMIT_MSG=$(jq -r '.head_commit.message // "No message"' "$GITHUB_EVENT_PATH" | tr '\n' ' ')
+          echo "COMMIT_MSG<<EOF" >> $GITHUB_ENV
+          echo "$COMMIT_MSG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
       - name: Notify Slack
         if: always()
         uses: slackapi/slack-github-action@v1.27.0
@@ -36,7 +46,7 @@ jobs:
                     { "title": "Git Branch", "value": "${{ github.ref_name }}", "short": true },
                     { "title": "Commit ID", "value": "${{ github.sha }}", "short": true },
                     { "title": "Git Commit Author", "value": "${{ github.actor }}", "short": true },
-                    { "title": "Git Commit Message", "value": "${{ github.event.head_commit.message || 'No message' | replace('\n',' ') }}", "short": false },
+                    { "title": "Git Commit Message", "value": "${{ env.COMMIT_MSG }}", "short": false },
                     { "title": "STATUS", "value": "${{ job.status }}", "short": true }
                   ]
                 }
