--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -23,34 +23,21 @@ jobs:
       - name: Prepare Commit Message
         id: commit
         run: |
-          MSG="${GITHUB_EVENT_PATH}"
-          # Extract commit message safely and replace newlines with space
           COMMIT_MSG=$(jq -r '.head_commit.message // "No message"' "$GITHUB_EVENT_PATH" | tr '\n' ' ')
-          echo "COMMIT_MSG<<EOF" >> $GITHUB_ENV
-          echo "$COMMIT_MSG" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          echo "COMMIT_MSG=$COMMIT_MSG" >> $GITHUB_ENV
 
       - name: Notify Slack
         if: always()
         uses: slackapi/slack-github-action@v1.27.0
         with:
           payload: |
-            {
-              "text": "*GitHub Action Notification*",
-              "attachments": [
-                {
-                  "color": "${{ job.status == 'success' && 'good' || 'danger' }}",
-                  "fields": [
-                    { "title": "Job Name", "value": "${{ github.job }}", "short": true },
-                    { "title": "Git URL", "value": "https://github.com/${{ github.repository }}", "short": true },
-                    { "title": "Git Branch", "value": "${{ github.ref_name }}", "short": true },
-                    { "title": "Commit ID", "value": "${{ github.sha }}", "short": true },
-                    { "title": "Git Commit Author", "value": "${{ github.actor }}", "short": true },
-                    { "title": "Git Commit Message", "value": "${{ env.COMMIT_MSG }}", "short": false },
-                    { "title": "STATUS", "value": "${{ job.status }}", "short": true }
-                  ]
-                }
-              ]
-            }
+            "*GitHub Action Notification*\n
+            Job Name: ${{ github.job }}\n
+            Git URL: https://github.com/${{ github.repository }}\n
+            Git Branch: ${{ github.ref_name }}\n
+            Commit ID: ${{ github.sha }}\n
+            Git Commit Author: ${{ github.actor }}\n
+            Git Commit Message: ${{ env.COMMIT_MSG }}\n
+            STATUS: ${{ job.status }}"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
