--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -1,4 +1,4 @@
-name: Slack Notifications Workflow
+name: Slack Notifications
 
 on:
   push:
@@ -7,37 +7,99 @@ on:
   pull_request:
 
 jobs:
-  build-and-notify:
+  notify:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Run Tests (Example)
-        run: |
-          echo "Running tests..."
-          sleep 3
-          # exit 1  # Uncomment to simulate failure
-
-      - name: Prepare Commit Message
-        id: commit
-        run: |
-          COMMIT_MSG=$(jq -r '.head_commit.message // "No message"' "$GITHUB_EVENT_PATH" | tr '\n' ' ')
-          echo "COMMIT_MSG=$COMMIT_MSG" >> $GITHUB_ENV
-
-      - name: Notify Slack
+      - name: Notify Slack on Start
         if: always()
         uses: slackapi/slack-github-action@v1.27.0
         with:
           payload: |
-            "*GitHub Action Notification*\n
-            Job Name: ${{ github.job }}\n
-            Git URL: https://github.com/${{ github.repository }}\n
-            Git Branch: ${{ github.ref_name }}\n
-            Commit ID: ${{ github.sha }}\n
-            Git Commit Author: ${{ github.actor }}\n
-            Git Commit Message: ${{ env.COMMIT_MSG }}\n
-            STATUS: ${{ job.status }}"
+            {
+              "text": ":rocket: A workflow has started!",
+              "attachments": [
+                {
+                  "color": "#439FE0",
+                  "fields": [
+                    {
+                      "title": "Repository",
+                      "value": "${{ github.repository }}",
+                      "short": true
+                    },
+                    {
+                      "title": "Branch",
+                      "value": "${{ github.ref_name }}",
+                      "short": true
+                    },
+                    {
+                      "title": "Actor",
+                      "value": "${{ github.actor }}",
+                      "short": true
+                    }
+                  ]
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Run Tests (example)
+        run: |
+          echo "Running tests..."
+          sleep 5
+          # exit 1   # Uncomment to test failure notification
+
+      - name: Notify Slack on Success
+        if: success()
+        uses: slackapi/slack-github-action@v1.27.0
+        with:
+          payload: |
+            {
+              "text": ":white_check_mark: Workflow succeeded!",
+              "attachments": [
+                {
+                  "color": "good",
+                  "fields": [
+                    {
+                      "title": "Commit",
+                      "value": "${{ github.sha }}",
+                      "short": true
+                    }
+                  ]
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Notify Slack on Failure
+        if: failure()
+        uses: slackapi/slack-github-action@v1.27.0
+        with:
+          payload: |
+            {
+              "text": ":x: Workflow failed!",
+              "attachments": [
+                {
+                  "color": "danger",
+                  "fields": [
+                    {
+                      "title": "Job",
+                      "value": "${{ github.job }}",
+                      "short": true
+                    },
+                    {
+                      "title": "Commit",
+                      "value": "${{ github.sha }}",
+                      "short": true
+                    }
+                  ]
+                }
+              ]
+            }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
