--- a/.github/workflows/slack.yaml
+++ b/.github/workflows/slack.yaml
@@ -18,28 +18,18 @@ jobs:
         if: always()
         uses: slackapi/slack-github-action@v1.27.0
         with:
-          payload: |
+          payload-templated: |
             {
               "text": ":rocket: A workflow has started!",
               "attachments": [
                 {
                   "color": "#439FE0",
                   "fields": [
-                    {
-                      "title": "Repository",
-                      "value": "${{ github.repository }}",
-                      "short": true
-                    },
-                    {
-                      "title": "Branch",
-                      "value": "${{ github.ref_name }}",
-                      "short": true
-                    },
-                    {
-                      "title": "Actor",
-                      "value": "${{ github.actor }}",
-                      "short": true
-                    }
+                    { "title": "Repository", "value": "${{ github.repository }}", "short": true },
+                    { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
+                    { "title": "Actor", "value": "${{ github.actor }}", "short": true },
+                    { "title": "Commit", "value": "${{ github.sha.substr(0,7) }}", "short": true },
+                    { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
                   ]
                 }
               ]
@@ -57,18 +47,18 @@ jobs:
         if: success()
         uses: slackapi/slack-github-action@v1.27.0
         with:
-          payload: |
+          payload-templated: |
             {
               "text": ":white_check_mark: Workflow succeeded!",
               "attachments": [
                 {
                   "color": "good",
                   "fields": [
-                    {
-                      "title": "Commit",
-                      "value": "${{ github.sha }}",
-                      "short": true
-                    }
+                    { "title": "Repository", "value": "${{ github.repository }}", "short": true },
+                    { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
+                    { "title": "Actor", "value": "${{ github.actor }}", "short": true },
+                    { "title": "Commit", "value": "${{ github.sha.substr(0,7) }}", "short": true },
+                    { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
                   ]
                 }
               ]
@@ -80,23 +70,19 @@ jobs:
         if: failure()
         uses: slackapi/slack-github-action@v1.27.0
         with:
-          payload: |
+          payload-templated: |
             {
               "text": ":x: Workflow failed!",
               "attachments": [
                 {
                   "color": "danger",
                   "fields": [
-                    {
-                      "title": "Job",
-                      "value": "${{ github.job }}",
-                      "short": true
-                    },
-                    {
-                      "title": "Commit",
-                      "value": "${{ github.sha }}",
-                      "short": true
-                    }
+                    { "title": "Job", "value": "${{ github.job }}", "short": true },
+                    { "title": "Repository", "value": "${{ github.repository }}", "short": true },
+                    { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
+                    { "title": "Actor", "value": "${{ github.actor }}", "short": true },
+                    { "title": "Commit", "value": "${{ github.sha.substr(0,7) }}", "short": true },
+                    { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
                   ]
                 }
               ]
