--- a/.github/workflows/slack.yaml
+++ b/.github/workflows/slack.yaml
@@ -28,7 +28,7 @@ jobs:
                     { "title": "Repository", "value": "${{ github.repository }}", "short": true },
                     { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
                     { "title": "Actor", "value": "${{ github.actor }}", "short": true },
-                    { "title": "Commit", "value": "${{ github.sha.substr(0,7) }}", "short": true },
+                    { "title": "Commit", "value": "${{ env.SHORT_SHA }}", "short": true },
                     { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
                   ]
                 }
@@ -36,6 +36,29 @@ jobs:
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      # - name: Notify Slack on Start
+      #   if: always()
+      #   uses: slackapi/slack-github-action@v1.27.0
+      #   with:
+      #     payload-templated: |
+      #       {
+      #         "text": ":rocket: A workflow has started!",
+      #         "attachments": [
+      #           {
+      #             "color": "#439FE0",
+      #             "fields": [
+      #               { "title": "Repository", "value": "${{ github.repository }}", "short": true },
+      #               { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
+      #               { "title": "Actor", "value": "${{ github.actor }}", "short": true },
+      #               { "title": "Commit", "value": "${{ github.sha.substr(0,7) }}", "short": true },
+      #               { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
+      #             ]
+      #           }
+      #         ]
+      #       }
+      #   env:
+      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
       - name: Run Tests (example)
         run: |
