--- a/.github/workflows/slack.yaml
+++ b/.github/workflows/slack.yaml
@@ -14,25 +14,26 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set short SHA
+      - name: Set Short SHA
         run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - name: Notify Slack on Start
         if: always()
-        uses: slackapi/slack-github-action@v1.27.0
+        uses: slackapi/slack-github-action@v2.0.0
         with:
           payload-templated: |
             {
               "text": ":rocket: A workflow has started!",
               "attachments": [
                 {
+                  "fallback": "Workflow started - repo: ${{ github.repository }}, branch: ${{ github.ref_name }}",
                   "color": "#439FE0",
                   "fields": [
                     { "title": "Repository", "value": "${{ github.repository }}", "short": true },
                     { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
                     { "title": "Actor", "value": "${{ github.actor }}", "short": true },
                     { "title": "Commit", "value": "${{ env.SHORT_SHA }}", "short": true },
-                    { "title": "Message", "value": "${{ github.event.head_commit.message || github.event.pull_request.title || 'N/A' }}" }
+                    { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
                   ]
                 }
               ]
@@ -48,20 +49,21 @@ jobs:
 
       - name: Notify Slack on Success
         if: success()
-        uses: slackapi/slack-github-action@v1.27.0
+        uses: slackapi/slack-github-action@v2.0.0
         with:
           payload-templated: |
             {
               "text": ":white_check_mark: Workflow succeeded!",
               "attachments": [
                 {
+                  "fallback": "Workflow succeeded - repo: ${{ github.repository }}, branch: ${{ github.ref_name }}",
                   "color": "good",
                   "fields": [
                     { "title": "Repository", "value": "${{ github.repository }}", "short": true },
                     { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
                     { "title": "Actor", "value": "${{ github.actor }}", "short": true },
                     { "title": "Commit", "value": "${{ env.SHORT_SHA }}", "short": true },
-                    { "title": "Message", "value": "${{ github.event.head_commit.message || github.event.pull_request.title || 'N/A' }}" }
+                    { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
                   ]
                 }
               ]
@@ -71,13 +73,14 @@ jobs:
 
       - name: Notify Slack on Failure
         if: failure()
-        uses: slackapi/slack-github-action@v1.27.0
+        uses: slackapi/slack-github-action@v2.0.0
         with:
           payload-templated: |
             {
               "text": ":x: Workflow failed!",
               "attachments": [
                 {
+                  "fallback": "Workflow failed - repo: ${{ github.repository }}, branch: ${{ github.ref_name }}",
                   "color": "danger",
                   "fields": [
                     { "title": "Job", "value": "${{ github.job }}", "short": true },
@@ -85,7 +88,7 @@ jobs:
                     { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
                     { "title": "Actor", "value": "${{ github.actor }}", "short": true },
                     { "title": "Commit", "value": "${{ env.SHORT_SHA }}", "short": true },
-                    { "title": "Message", "value": "${{ github.event.head_commit.message || github.event.pull_request.title || 'N/A' }}" }
+                    { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
                   ]
                 }
               ]
