--- a/.github/workflows/slack.yaml
+++ b/.github/workflows/slack.yaml
@@ -1,4 +1,4 @@
-name: Slack Notifications
+name: Notify Slack on CI
 
 on:
   push:
@@ -9,89 +9,24 @@ on:
 jobs:
   notify:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Set Short SHA
-        run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
-
-      - name: Notify Slack on Start
-        if: always()
+      - name: Send notification to Slack
         uses: slackapi/slack-github-action@v2.0.0
         with:
-          payload-templated: |
+          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
+          slack-message: |
             {
-              "text": ":rocket: A workflow has started!",
-              "attachments": [
+              "text": "🚀 *GitHub Action Triggered*",
+              "blocks": [
                 {
-                  "fallback": "Workflow started - repo: ${{ github.repository }}, branch: ${{ github.ref_name }}",
-                  "color": "#439FE0",
-                  "fields": [
-                    { "title": "Repository", "value": "${{ github.repository }}", "short": true },
-                    { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
-                    { "title": "Actor", "value": "${{ github.actor }}", "short": true },
-                    { "title": "Commit", "value": "${{ env.SHORT_SHA }}", "short": true },
-                    { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
-                  ]
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*Repository:* ${{ github.repository }}\n*Branch:* ${{ github.ref_name }}\n*Commit:* ${{ github.sha }}\n*Message:* ${{ github.event.head_commit.message || 'No message' }}"
+                  }
                 }
               ]
             }
+          payload-templated: "true"
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-      - name: Run Tests (example)
-        run: |
-          echo "Running tests..."
-          sleep 5
-          # exit 1   # Uncomment to test failure notification
-
-      - name: Notify Slack on Success
-        if: success()
-        uses: slackapi/slack-github-action@v2.0.0
-        with:
-          payload-templated: |
-            {
-              "text": ":white_check_mark: Workflow succeeded!",
-              "attachments": [
-                {
-                  "fallback": "Workflow succeeded - repo: ${{ github.repository }}, branch: ${{ github.ref_name }}",
-                  "color": "good",
-                  "fields": [
-                    { "title": "Repository", "value": "${{ github.repository }}", "short": true },
-                    { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
-                    { "title": "Actor", "value": "${{ github.actor }}", "short": true },
-                    { "title": "Commit", "value": "${{ env.SHORT_SHA }}", "short": true },
-                    { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
-                  ]
-                }
-              ]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-      - name: Notify Slack on Failure
-        if: failure()
-        uses: slackapi/slack-github-action@v2.0.0
-        with:
-          payload-templated: |
-            {
-              "text": ":x: Workflow failed!",
-              "attachments": [
-                {
-                  "fallback": "Workflow failed - repo: ${{ github.repository }}, branch: ${{ github.ref_name }}",
-                  "color": "danger",
-                  "fields": [
-                    { "title": "Job", "value": "${{ github.job }}", "short": true },
-                    { "title": "Repository", "value": "${{ github.repository }}", "short": true },
-                    { "title": "Branch", "value": "${{ github.ref_name }}", "short": true },
-                    { "title": "Actor", "value": "${{ github.actor }}", "short": true },
-                    { "title": "Commit", "value": "${{ env.SHORT_SHA }}", "short": true },
-                    { "title": "Message", "value": "${{ github.event.head_commit.message }}" }
-                  ]
-                }
-              ]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
